syntax = "proto3";

package relaynet.parcel_distribution;

import "_shared.proto";

service ApplicationDirectory {
    rpc CreateApplication (CreateApplicationRequest) returns (Application) {}
    rpc UpdateApplication (Application) returns (Application) {}
    rpc RemoveApplication (Application) returns (Application) {}
}

message CreateApplicationRequest {
    string public_key = 1;

    // The absence of a callback means that the application will poll the service
    relaynet._shared.ClientCallback parcel_delivery_callback = 2;
}

message Application {
    string id = 1;
}

service ParcelDistribution {
    rpc ConsignParcel (Parcel) returns (ParcelReceipt) {}
    rpc CollectParcels (ParcelCollection) returns (stream Parcel) {}
    // TODO: Consider large parcels. Use "references" to GET/POST URLs?
}

message Parcel {
    string payload = 1;
}

message ParcelReceipt {
    string parcel_id = 1;
}

message ParcelCollection {}
